# haskell-ncurses

./: hsncurses-shim.h  ncurses.cabal
UI/: NCurses.chs
UI/NCurses/: Enums.chs  Panel.chs
cbits/: hsncurses-shim.c  hsncurses-shim.h  mavericks-c2hs-workaround.h
lib/UI/: NCurses.chs
lib/UI/NCurses/: Compat.hs  Enums.chs  Panel.chs  Types.hs
