name: ncurses
version: 0.2.1
license: GPL-3
license-file: license.txt
author: John Millikin <jmillikin@gmail.com>
maintainer: John Millikin <jmillikin@gmail.com>
build-type: Simple
cabal-version: >= 1.6
category: User Interfaces, Foreign
stability: experimental
homepage: https://john-millikin.com/software/haskell-ncurses/
bug-reports: mailto:jmillikin@gmail.com

synopsis: Modernised bindings to GNU ncurses
description:

extra-source-files:
  cbits/hsncurses-shim.c
  cbits/hsncurses-shim.h

source-repository head
  type: bazaar
  location: https://john-millikin.com/branches/haskell-ncurses/0.2/

source-repository head
  type: bazaar
  location: https://john-millikin.com/branches/haskell-ncurses/0.2/
  tag: haskell-ncurses_0.2.1

library
  hs-source-dirs: lib
  ghc-options: -Wall -O2

  build-depends:
      base >= 4.0 && < 5.0
    , containers >= 0.2
    , text >= 0.7
    , transformers >= 0.2

  build-tools:
    c2hs >= 0.15

  extra-libraries: panel ncursesw

  c-sources: cbits/hsncurses-shim.c

  exposed-modules:
    UI.NCurses
    UI.NCurses.Panel

  other-modules:
    UI.NCurses.Enums
    UI.NCurses.Types
